# soft-body-physics

./: .gitignore  CMakeLists.txt  README.md
include/: Point.hpp  Shape.hpp  SoftBodyPhysics2D.hpp  Spring.hpp  Vector2D.hpp
src/: Point.cpp  Shape.cpp  SoftBodyPhysics2D.cpp  Spring.cpp  Vector2D.cpp  main.cpp
